# chatbot

./: Cargo.toml  README.md  config.example.toml  config.json.example  rustfmt.toml
src/: config.rs  core.rs  logger.rs  main.rs  plugin.rs
src/backends/: irc.rs  mod.rs
src/core/: bot_core.rs  enums.rs  mod.rs  types.rs
src/modules/: mod.rs
src/modules/eightball/: mod.rs
src/modules/msg_pipe/: mod.rs
src/modules/patterns/: mod.rs
src/modules/randomchat/: dictionary.rs  randomchat.rs
src/plugins/: mod.rs
src/plugins/randomchat/: dictionary.rs  mod.rs  randomchat.rs
src/sources/: discord.rs  irc.rs  mod.rs  slack.rs  stdin.rs
