[package]
name = "chatbot"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "0.2"
quick-error = "1.2"
rand = "0.3"
timer = "0.2"
irc = "0.12"
slack = { git = "https://github.com/fizyk20/slack-rs.git", branch = "less-blocking-reads" }
slack_api = "0.18"
discord = { git = "https://github.com/fizyk20/discord-rs.git", branch = "modifications" }
